--- a/hw/hw-01-draft.qmd
+++ b/hw/hw-01-draft.qmd
@@ -55,7 +55,7 @@ library(knitr)
 
 The conceptual exercises are focused on explaining concepts and showing results mathematically. Show your work for each question. \
 \
-You may write the answers for conceptual exercises by hand or type them in your Quarto document.
+**You may write the answers and associated work for conceptual exercises by hand or type them in your Quarto document.**
 :::
 
 ## Exercise 1
@@ -66,7 +66,9 @@ b\. Show that $(\mathbf{I} - \mathbf{H})$ is symmetric and idempotent.
 
 ## Exercise 2
 
-Given $\mathbf{x}$ is a $k \times 1$ vector and $\mathbf{A}$ is a $k \times k$ matrix, such that $\mathbf{A}$ is not a function of $\mathbf{x}$, show
+Let $\mathbf{x}$ is a $k \times 1$ vector and $\mathbf{A}$ is a $k \times k$ matrix, such that $\mathbf{A}$ is not a function of $\mathbf{x}$.
+
+Show
 
 $$
 \nabla_\mathbf{x} \hspace{1mm} \mathbf{x}^T\mathbf{A}\mathbf{x} = 2\mathbf{A}\mathbf{x}
@@ -76,15 +78,21 @@ $$
 
 ## Exercise 3
 
-\[Need to add more here\]
+In class we used the sum of squared residuals (SSR) to find an estimate of the coefficients $\hat{\boldsymbol{\beta}} = (\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T\mathbf{Y}$ . To show this is the least squares estimate, we now need to show that we have, in fact, found the estimate of $\boldsymbol{\beta}$ that minimizes the SSR (rather than maximize).
 
-Expalin how we know that this is a minimum.
+If the Hessian matrix $\nabla_{\boldsymbol{\beta}}^2 SSR$ is positive definite, then we know we have found the $\hat{\boldsymbol{\beta}}$ that minimizes SSR, i.e., the least squares estimator. Additionally, we have the following:
 
-What would this mean about the predictors in multiple linear regression?
+::: {.callout-note appearance="simple" icon="false"}
+## Proposition
+
+A matrix $\mathbf{A}$ is positive definite if $\mathbf{z}^T\mathbf{A}\mathbf{z} > 0$ , given $\mathbf{z}$ is a non-zero vector.
+:::
+
+Show that $\nabla_{\boldsymbol{\beta}}^2 SSR$ is positive definite.
 
 ## Exercise 4
 
-Prove that the maximum value of $R^2$ must be less than 1 if the data contains observations such that there are different observed values of the response for the same value of the predictor (e.g., observations $(x_i, y_i)$ and $(x_j, y_j)$ are such that $x_i = x_j$ and $y_i \neq y_j$ ).
+Prove that the maximum value of $R^2$ must be less than 1 if the data set contains observations such that there are different observed values of the response for the same value of the predictor (e.g., the dataset contains observations $(x_i, y_i)$ and $(x_j, y_j)$ such that $x_i = x_j$ and $y_i \neq y_j$ ).
 
 # Applied exercises
 
@@ -93,7 +101,7 @@ Prove that the maximum value of $R^2$ must be less than 1 if the data contains o
 
 The applied exercises are focused on applying the concepts to analyze data.
 
-All work for the applied exercises must be typed in your Quarto document following a reproducible workflow.
+**All work for the applied exercises must be typed in your Quarto document following a reproducible workflow.**
 
 Write all narrative using complete sentences and include informative axis labels / titles on visualizations.
 :::
@@ -115,29 +123,31 @@ The analysis will focus on the following variables:
 
 -   `lakeid`: a factor denoting the lake name
 
--   `ice_duration`: a number denoting the number of days between the freeze and ice breakup dates of each lake
+-   `ice_duration`: number of days between the freeze and ice breakup dates of each lake
 
--   `ave_air_temp_adjusted`: a number denoting the air temperature in degrees Celsius, collected in Madison, WI and adjusted for biases <!--# update this variable name and definition-->
+-   `air_temp_avg`: yearly average air temperature in Madison, WI
 
 ::: {.callout-note icon="false"}
 ## Analysis goal
 
-The goal of this analysis is to use linear regression explain variabiltiy in ice duration for lakes in Madison, Wisconsin based on air temperature. Because ice cover is impacted by various environmental factors, researchers are interested in examining the association between these two factors to better understand how quickly the climate is changing.
+The goal of this analysis is to use linear regression explain variability in ice duration for lakes in Madison, Wisconsin based on air temperature. Because ice cover is impacted by various environmental factors, researchers are interested in examining the association between these two factors to better understand how quickly the climate is changing.
 :::
 
 ## **Exercise 5**
 
 Let's start by looking at the response variable `ice_duration`.
 
-a.  Create side-by-side boxplots to visualize the distribution of `ice_duration` for each lake. <!--# add link to reference on side-by-side boxplots-->
+a.  Create side-by-side boxplots to visualize the distribution of `ice_duration` for each lake.
 
-b.  Visualize the distribution of ice duration over time for each lake. <!--# add resource on line plot-->
+b.  Visualize the distribution of ice duration over time for each lake.
 
-c.  The current data is currently structured such there are separate measurements for each lake in a given year. We will combine the data such that there is one row per year that contains the average ice duration across the two lakes.
+c.  There are separate measurements for each lake in the `icecover` data frame. In this analysis, we will combine the data from both lakes and use the average ice duration each year for the analysis.
 
-Evaluate the analysis decision to combine the data in this way.
+Evaluate the analysis choice to use the average per year rather than the individual lake measurements. Some things to consider in your evaluation: *Does the average accurately reflects the ice duration for lakes in Madison, WI for that year? Will there be information loss? How might that impact (or not) the analysis conclusions? Etc.*
 
-<!--# Need to reword this question-->
+::: callout-tip
+See the [ggplot2 reference](https://ggplot2.tidyverse.org/reference/index.html#geoms) for example code and plots.
+:::
 
 ## Exercise 6
 
@@ -150,10 +160,15 @@ a.  Fill in the code below to create a new data frame, `icecover_avg`, of the av
 
     icecover_avg <- icecover |>
       group_by(____, _____) |>
-      summarise(avg_ice_duration = mean(_____))
+      summarise(avg_ice_duration = mean(_____)) |>
+      ungroup()
     ```
 
-Then join `icecover_avg` and `airtemp` to create a new data frame. The new data frame should have 268 <!--# check this number--> observations.
+Then join `icecover_avg` and `airtemp` to create a new data frame. The new data frame should have 134 observations.
+
+::: callout-important
+You will use the new data frame with average ice duration and average air temperature for the remainder of the assignment.
+:::
 
 b.  Visualize the relationship between the air temperature and average ice duration. Do you think a linear model would be a good fit to capture the relationship between the two variables?
 
@@ -228,3 +243,19 @@ To submit your assignment:
 -   Select the first page of your .PDF submission to be associated with the *“Workflow & formatting”* section.
 
 # Grading
+
+| Component             | Points |
+|-----------------------|--------|
+| Ex 1                  | 4      |
+| Ex 2                  | 4      |
+| Ex 3                  | 4      |
+| Ex 4                  | 4      |
+| Ex 5                  | 6      |
+| Ex 6                  | 6      |
+| Ex 7                  | 5      |
+| Ex 8                  | 5      |
+| Ex 9                  | 4      |
+| Ex 10                 | 5      |
+| Workflow & formatting | 3      |
+
+The "Workflow & formatting" grade is to assess the reproducible workflow and document format. This includes having at least 3 informative commit messages, a neatly organized document with readable code and your name and the date updated in the YAML.
