--- a/slides/06-mlr-pt2.qmd
+++ b/slides/06-mlr-pt2.qmd
@@ -2,7 +2,7 @@
 title: "Multiple linear regression (MLR)"
 subtitle: "Categorical predictors + Assessment"
 author: "Prof. Maria Tackett"
-date: "2024-09-10"
+date: "2024-09-12"
 date-format: "MMM DD, YYYY"
 footer: "[🔗 STA 221 - Fall 2024](https://sta221-fa24.netlify.app)"
 logo: "../images/logo.png"
@@ -42,9 +42,27 @@ bibliography: references.bib
 
 -   Team labs start on Monday
 
-## HW 01
+## Homework
 
-<!--# Add-->
+Homework will generally be split into two sections:
+
+<br>
+
+1️⃣ **Conceptual exercises**
+
+The conceptual exercises are focused on explaining concepts and showing results mathematically. Show your work for each question. \
+\
+**You may write the answers and associated work for conceptual exercises by hand or type them in your Quarto document.**
+
+## Homework 
+
+2️⃣ **Applied exercises**
+
+The applied exercises are focused on applying the concepts to analyze data.
+
+**All work for the applied exercises must be typed in your Quarto document following a reproducible workflow.**
+
+Write all narrative using complete sentences and include informative axis labels / titles on visualizations.
 
 ## Topics
 
@@ -54,7 +72,7 @@ bibliography: references.bib
 
 -   Compare models using $Adj. R^2$
 
--   Geometric interpretation <!--# ?-->
+-   Introduce LaTex
 
 ## Computing setup
 
@@ -190,7 +208,7 @@ $$
 
 ## Indicator variables {.midi}
 
-Suppose we want to predict the amount of sleep a Duke student gets based on whether they are in Pratt (Prat Yes/ No are the only two options). Consider the model
+Suppose we want to predict the amount of sleep a Duke student gets based on whether they are in Pratt (Pratt Yes/ No are the only two options). Consider the model
 
 $$
 Sleep_i = \beta_0 + \beta_1\mathbf{1}(Pratt_i = \texttt{Yes}) + \beta_2\mathbf{1}(Pratt_i = \texttt{No})
@@ -212,7 +230,7 @@ $$
 
 -   Suppose there is a categorical variable with $k$ levels
 
--   We can make K indicator variables from the data - one indicator for each level
+-   We can make $k$ indicator variables from the data - one indicator for each level
 
 -   An **indicator (dummy) variable** takes values 1 or 0
 
@@ -220,7 +238,7 @@ $$
 
     -   0 if the observation does not belong to that level
 
-## Create indicator variables for `verified_income`
+## Indicator variables for `verified_income`
 
 ```{r}
 #| echo: true
@@ -256,6 +274,10 @@ loan50 |>
   slice(1, 3, 6)
 ```
 
+::: appex
+Take a look at the design matrix in [AE 02](https://sta221-fa24.netlify.app/ae/ae-02-mlr)
+:::
+
 ## Interpreting `verified_income` {.small}
 
 ```{r}
@@ -269,14 +291,14 @@ tidy(int_fit
 . . .
 
 ::: incremental
--   The baseline category is `Not verified`.
+-   The baseline level is `Not verified`.
 -   People with source verified income are expected to take a loan with an interest rate that is 2.211% higher, on average, than the rate on loans to those whose income is not verified, holding all else constant.
 :::
 
 . . .
 
 ::: question
-Interpret the coefficient of `Verified` in the context of the data.
+What is the expected interest rate for someone whose income is `Verified`, who has a debt-to-income ratio of 0 and annual income of \$0?
 :::
 
 # Interaction terms
@@ -289,7 +311,7 @@ Interpret the coefficient of `Verified` in the context of the data.
 
 ## Interest rate vs. annual income
 
-The lines are not parallel indicating there is an **interaction effect**. The slope of annual income differs based on the income verification.
+The lines are not parallel indicating there is a potential **interaction effect**. The slope of annual income differs based on the income verification.
 
 ```{r}
 #| echo: false
@@ -315,6 +337,12 @@ p2 <- ggplot(loan50,
 p1 + p2 +
   plot_annotation(title = "Interest rate vs. annual income")
 ```
+
+# Application exercise
+
+::: appex
+📋 <https://sta221-fa24.netlify.app/ae/ae-02-mlr>
+:::
 
 ## Interaction term in model {.smaller}
 
@@ -382,6 +410,34 @@ where
 -   Adjusted $R^2$ can be used as a quick assessment to compare the fit of multiple models; however, it should not be the only assessment!
 -   Use $R^2$ when describing the relationship between the response and predictor variables
 
+. . .
+
+::: appex
+📋 <https://sta221-fa24.netlify.app/ae/ae-02-mlr>
+:::
+
+# LaTex
+
+## Latex in this class
+
+For this class you will need to be able to...
+
+-   Properly write mathematical symbols, e.g., $\beta_1$ not *B1,* $R^2$ not *R2*
+
+-   Write basic regression equations, e.g., $\hat{y} = \beta_0 + \beta_1x_1 + \beta_2x_2$
+
+-   Write matrix equations: $\mathbf{y} = \mathbf{X}\boldsymbol{\beta} + \boldsymbol{\epsilon}$
+
+-   Write hypotheses (we'll start this next week), e.g., $H_0: \beta = 0$
+
+You are welcome to but <u>not</u> required to write math proofs using LaTex.
+
+## Application exercise
+
+::: appex
+📋 <https://sta221-fa24.netlify.app/ae/ae-02-mlr>
+:::
+
 ## Recap
 
 -   Interpreted categorical predictors and interaction terms
@@ -389,6 +445,8 @@ where
 -   Assessed model fit using RSME and $R^2$
 
 -   Compared models using $Adj. R^2$
+
+-   Introduced LaTex
 
 ## Next class
 
