--- a/hw/hw-01.qmd
+++ b/hw/hw-01.qmd
@@ -158,7 +158,7 @@ a.  Fill in the code below to create a new data frame, `icecover_avg`, of the av
 You will use the new data frame with average ice duration and average air temperature for the remainder of the assignment.
 :::
 
-b.  Visualize the relationship between the air temperature and average ice duration. Do you think a linear model would be a good fit to capture the relationship between the two variables?
+b.  Visualize the relationship between the air temperature and average ice duration. Do you think a linear model would be a good fit to capture the relationship between the two variables? <!--# Note for the future: Change to "reasonable" or something weaker than "good"-->
 
 ::: render-commit-push
 Now is a good time to render your document again if you haven't done so recently and commit (with a meaningful commit message) and push all updates.
@@ -196,7 +196,7 @@ b.  Briefly comment on the model fit based on $R^2$.
 You are asked to use a reproducible workflow for all of your work in the class, and the goal of this question to is better understand potential real-world implications of doing (or not) so. Below are some real-life examples in which having a non-reproducible workflow resulted in errors that impacted research or public records.
 
 | Reproducibility error                                    | Consequence                                          | Source(s)                                                                                                       |
-|-------------------|-------------------|-----------------------------------|
+|-------------------|-------------------|----------------------------------|
 | Limitations in Excel data formats                        | Loss of 16,000 COVID case records in the UK          | ([Kelion 2020](https://www.bbc.com/news/technology-54423988))                                                   |
 | Automatic formatting in Excel                            | Important genes disregarded in scientific studies    | ([Ziemann, Eren, and El-Osta 2016](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-016-1044-7)) |
 | Deletion of a cell caused rows to shift                  | Mix-up of which patient group received the treatment | ([Wallensteen et al. 2018](https://pubmed.ncbi.nlm.nih.gov/27373757/))                                          |
