update submission instructions.

--- a/labs/lab-02.qmd
+++ b/labs/lab-02.qmd
@@ -276,6 +276,8 @@ To submit your assignment:
 
 -   Click on the assignment, and you’ll be prompted to submit it.
 
+-   Select all team members’ names, so they receive credit on the assignment. [Click here](https://help.gradescope.com/article/m5qz2xsnjy-student-add-group-members) for video on adding team members to assignment on Gradescope.
+
 -   Mark the pages associated with each exercise. All of the pages of your lab should be associated with at least one question (i.e., should be “checked”).
 
 -   Select the first page of your .PDF submission to be associated with the *“Workflow & formatting”* section.
